--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="BrightWave Enterprise - Your trusted partner for student hostels, land sales, residential properties, and estate development in Nigeria." />
+  <meta name="description" content="BrightWave Properties - Your trusted partner for student hostels, land sales, residential properties, and estate development in Nigeria." />
   <!-- Open Graph Meta Tags for Previews -->
-  <meta property="og:title" content="BrightWave Enterprise" />
-  <meta property="og:description" content="Discover student hostels, land sales, residential properties, and estate development with BrightWave Enterprise in Nigeria." />
+  <meta property="og:title" content="BrightWave Properties" />
+  <meta property="og:description" content="Discover student hostels, land sales, residential properties, and estate development with BrightWave Properties in Nigeria." />
   <meta property="og:image" content="https://brightwaveenterprises.online/assets/images/brightwave-preview.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="500" />
   <meta property="og:image:height" content="500" />
   <meta property="og:url" content="https://brightwaveenterprises.online/" />
   <meta property="og:type" content="website" />
-  <title>BrightWave Enterprise</title>
+  <title>BrightWave Properties</title>
   <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
@@ -28,24 +28,24 @@
   <header class="bg-gray-800 shadow-md sticky top-0 z-50">
     <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
       <div class="flex items-center space-x-3">
-        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" class="h-10" />
-        <h1 class="text-2xl font-bold text-blue-400">BrightWave Enterprise</h1>
+        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Properties Logo" class="h-10" />
+        <h1 class="text-2xl font-bold text-blue-400">BrightWave Properties</h1>
       </div>
       <button class="md:hidden menu-toggle text-2xl text-white" aria-label="Toggle navigation menu">☰</button>
       <ul class="hidden md:flex space-x-6 text-lg font-semibold">
-        <li><a href="/" class="text-blue-400 hover:text-blue-300">Home</a></li>
-        <li><a href="/hostels" class="hover:text-blue-300">Hostels</a></li>
-        <li><a href="/about" class="hover:text-blue-300">About</a></li>
-        <li><a href="/contact" class="hover:text-blue-300">Contact</a></li>
-        <li><a href="/faq" class="hover:text-blue-300">FAQ</a></li>
+        <li><a href="/" class="text-blue-400 hover:text-blue-300 nav-link active">Home</a></li>
+        <li><a href="/hostels" class="hover:text-blue-300 nav-link">Hostels</a></li>
+        <li><a href="/about" class="hover:text-blue-300 nav-link">About</a></li>
+        <li><a href="/contact" class="hover:text-blue-300 nav-link">Contact</a></li>
+        <li><a href="/faq" class="hover:text-blue-300 nav-link">FAQ</a></li>
       </ul>
     </nav>
-    <ul class="nav-links hidden bg-gray-800 shadow-md md:hidden flex-col items-center space-y-4 py-4">
-      <li><a href="/" class="text-blue-400 font-semibold hover:text-blue-300">Home</a></li>
-      <li><a href="/hostels" class="hover:text-blue-300">Hostels</a></li>
-      <li><a href="/about" class="hover:text-blue-300">About</a></li>
-      <li><a href="/contact" class="hover:text-blue-300">Contact</a></li>
-      <li><a href="/faq" class="hover:text-blue-300">FAQ</a></li>
+    <ul class="nav-links hidden bg-gray-800 shadow-md md:hidden flex-col items-center space-y-4 py-4 transition-all duration-300">
+      <li><a href="/" class="text-blue-400 font-semibold hover:text-blue-300 nav-link active">Home</a></li>
+      <li><a href="/hostels" class="hover:text-blue-300 nav-link">Hostels</a></li>
+      <li><a href="/about" class="hover:text-blue-300 nav-link">About</a></li>
+      <li><a href="/contact" class="hover:text-blue-300 nav-link">Contact</a></li>
+      <li><a href="/faq" class="hover:text-blue-300 nav-link">FAQ</a></li>
     </ul>
   </header>
 
@@ -53,13 +53,34 @@
   <section class="hero relative h-[80vh] flex items-center justify-center bg-cover bg-center" style="background-image: url('/assets/images/brightwave-hero-water-estate.jpg');">
     <div class="absolute inset-0 bg-gradient-to-b from-blue-900/30 via-blue-600/50 to-blue-400/70 bg-opacity-70"></div>
     <div class="relative text-center text-white px-4" data-aos="fade-up" data-aos-duration="1000">
-      <h1 class="text-5xl md:text-6xl font-extrabold mb-4 tracking-tight">Building a Brighter Future with BrightWave</h1>
+      <h1 class="text-5xl md:text-6xl font-extrabold mb-4 tracking-tight">Building a Brighter Future with BrightWave Properties</h1>
       <p class="text-xl md:text-2xl mb-6 font-medium">Student Hostels, Land Sales, Residential Properties, and Estate Development in Nigeria</p>
       <div class="flex flex-col md:flex-row justify-center gap-4">
-        <a href="/hostels" class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg hover:bg-blue-700 transition font-semibold text-lg">Explore Our Services</a>
+        <a href="/hostels" class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg hover:bg-blue-700 transition font-semibold text-lg">Explore Properties</a>
         <a href="/contact" class="inline-block bg-transparent border-2 border-white text-white px-8 py-4 rounded-lg hover:bg-white hover:text-gray-900 transition font-semibold text-lg">Get in Touch</a>
       </div>
-      <a href="#about" class="mt-6 inline-block text-white animate-bounce">↓ Scroll Down ↓</a>
+      <a href="#properties" class="mt-6 inline-block text-white animate-bounce">↓ Scroll Down ↓</a>
+    </div>
+  </section>
+
+  <!-- Properties Section -->
+  <section id="properties" class="py-16" data-aos="fade-up" data-aos-duration="1000">
+    <div class="container mx-auto px-4">
+      <h2 class="text-4xl font-bold text-center mb-8">Our Properties</h2>
+      <p class="text-lg text-center mb-12 font-medium">Explore our range of hostels and estates tailored to your needs.</p>
+      <div class="flex justify-center mb-8">
+        <select id="propertyFilter" class="bg-gray-700 text-white px-4 py-2 rounded-lg">
+          <option value="all">All Properties</option>
+          <option value="hostel">Hostels</option>
+          <option value="estate">Estates</option>
+        </select>
+      </div>
+      <div id="propertiesGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+        <!-- Properties will be populated by JavaScript -->
+      </div>
+      <div class="text-center mt-8">
+        <a href="/hostels" class="inline-block text-blue-400 hover:text-blue-300 font-semibold text-lg">View All Properties</a>
+      </div>
     </div>
   </section>
 
@@ -68,7 +89,7 @@
     <h2 class="text-4xl font-bold text-center mb-8">Who We Are</h2>
     <div class="flex flex-col md:flex-row items-center gap-8">
       <p class="text-lg md:w-1/2 font-medium leading-relaxed">
-        BrightWave Enterprise is a dynamic real estate company committed to transforming Nigeria’s property landscape. 
+        BrightWave Properties is a dynamic real estate company committed to transforming Nigeria’s property landscape. 
         From affordable student hostels to land sales, residential properties, and estate development, we’re building communities that inspire growth and opportunity.
       </p>
       <img src="/assets/images/brightwave-project-1.jpg" alt="Our Vision" class="md:w-1/2 rounded-lg shadow-lg" />
@@ -99,70 +120,9 @@
     </div>
   </section>
 
-  <!-- Services Section -->
-  <section id="services" class="py-16" data-aos="fade-up" data-aos-duration="1000">
-    <div class="container mx-auto px-4">
-      <h2 class="text-4xl font-bold text-center mb-8">Our Services</h2>
-      <p class="text-lg text-center mb-12 font-medium">Explore our diverse range of real estate solutions tailored to your needs.</p>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center transition-transform transform hover:scale-105">
-          <img src="/assets/images/brightwave-project-1.jpg" alt="Student Hostels" class="w-full h-48 object-cover" />
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold mb-2">Student Hostels</h3>
-            <p class="font-medium">Affordable, secure, and modern hostels designed for students’ comfort and success.</p>
-          </div>
-        </div>
-        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center transition-transform transform hover:scale-105">
-          <img src="/assets/images/land-sale.jpg" alt="Land Sales" class="w-full h-48 object-cover" />
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold mb-2">Land Sales</h3>
-            <p class="font-medium">Prime plots for sale in strategic locations, perfect for investment or development.</p>
-          </div>
-        </div>
-        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center relative transition-transform transform hover:scale-105">
-          <img src="/assets/images/residential.jpg" alt="Residential Properties" class="w-full h-48 object-cover opacity-50" />
-          <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-            <span class="text-white text-2xl font-bold bg-blue-600 px-4 py-2 rounded">Coming Soon</span>
-          </div>
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold mb-2">Residential Properties</h3>
-            <p class="font-medium">Quality homes built for modern living, from apartments to family houses.</p>
-          </div>
-        </div>
-        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center relative transition-transform transform hover:scale-105">
-          <img src="/assets/images/estate.jpg" alt="Estate Development" class="w-full h-48 object-cover opacity-50" />
-          <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-            <span class="text-white text-2xl font-bold bg-blue-600 px-4 py-2 rounded">Coming Soon</span>
-          </div>
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold mb-2">Estate Development</h3>
-            <p class="font-medium">Master-planned estates that blend luxury, functionality, and community.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Featured Project: BrightWave Estate -->
-  <section id="brightwave-estate" class="container mx-auto px-4 py-16" data-aos="fade-up" data-aos-duration="1000">
-    <h2 class="text-4xl font-bold text-center mb-8">Introducing BrightWave Estate</h2>
-    <div class="flex flex-col md:flex-row items-center gap-8">
-      <img src="/assets/images/brightwave-estate-placeholder.jpg" alt="BrightWave Estate" class="md:w-1/2 rounded-lg shadow-lg transition-transform transform hover:scale-105" />
-      <div class="md:w-1/2">
-        <p class="text-lg font-medium leading-relaxed mb-4">
-          We’re excited to announce BrightWave Estate, a future development on 6 acres of prime land at Obada Ikija, Abeokuta. 
-          This estate will offer residential plots, modern homes, and community amenities—stay tuned for updates!
-        </p>
-        <div class="text-center">
-          <span class="text-white text-2xl font-bold bg-blue-600 px-4 py-2 rounded">Coming Soon</span>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Call to Action -->
   <section class="cta bg-blue-700 text-white py-16 text-center" data-aos="fade-up" data-aos-duration="1000">
-    <h2 class="text-4xl font-bold mb-4">Partner with BrightWave Enterprise</h2>
+    <h2 class="text-4xl font-bold mb-4">Partner with BrightWave Properties</h2>
     <p class="text-lg mb-6 font-medium">Whether you’re a student, investor, or developer, we’re here to bring your real estate vision to life.</p>
     <a href="/contact" class="inline-block bg-white text-blue-700 px-8 py-4 rounded-lg hover:bg-gray-100 transition font-semibold text-lg">Get Started Today</a>
   </section>
@@ -170,7 +130,7 @@
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-8">
     <div class="container mx-auto px-4 text-center">
-      <p class="mb-4 font-medium">© 2025 BrightWave Enterprise. All rights reserved.</p>
+      <p class="mb-4 font-medium">© 2025 BrightWave Properties. All rights reserved.</p>
       <div class="flex justify-center space-x-6 mb-4">
         <a href="https://www.facebook.com/share/19BvJAymc3/?mibextid=wwXIfr" class="flex items-center space-x-2 hover:text-blue-400 font-semibold">
           <i class="fab fa-facebook-f"></i>
@@ -191,9 +151,12 @@
     </div>
   </footer>
 
-  <!-- Animation Initialization -->
+  <!-- JavaScript -->
   <script>
+    // Initialize AOS
     AOS.init();
+
+    // Navigation Toggle
     document.addEventListener('DOMContentLoaded', () => {
       const toggle = document.querySelector('.menu-toggle');
       const navLinks = document.querySelector('.nav-links');
@@ -201,20 +164,66 @@
         navLinks.classList.toggle('hidden');
         toggle.textContent = navLinks.classList.contains('hidden') ? '☰' : '✕';
       });
-    });
-  </script>
 
-  <!-- Tawk.to Live Chat Script with API Integration -->
-  <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    Tawk_API.api_key = '98b9a19a5b7bf1d2b6af110875d8f5a3f14d19e1';
+      // Active Nav Link Styling
+      const navLinksElements = document.querySelectorAll('.nav-link');
+      navLinksElements.forEach(link => {
+        link.addEventListener('click', () => {
+          navLinksElements.forEach(l => l.classList.remove('active'));
+          link.classList.add('active');
+        });
+        if (window.location.pathname === link.getAttribute('href')) {
+          link.classList.add('active');
+        }
+      });
+    });
+
+    // Fetch Properties
+    async function fetchProperties(type = 'all') {
+      try {
+        const url = type === 'all' ? '/api/properties' : `/api/properties?type=${type}`;
+        const response = await fetch(url, { credentials: 'include' });
+        if (!response.ok) throw new Error('Network response was not ok');
+        const properties = await response.json();
+        const grid = document.getElementById('propertiesGrid');
+        grid.innerHTML = properties.length ? properties.map(prop => `
+          <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center transition-transform transform hover:scale-105">
+            <div class="relative">
+              <img src="${prop.images && prop.images.length ? '/assets/' + prop.images[0] : '/assets/images/property-placeholder.jpg'}" alt="${prop.title}" class="w-full h-48 object-cover" />
+              ${prop.construction_status !== 'completed' ? `<div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+                <span class="text-white text-xl font-bold bg-blue-600 px-4 py-2 rounded">Coming Soon</span>
+              </div>` : ''}
+            </div>
+            <div class="p-6">
+              <h3 class="text-2xl font-semibold mb-2">${prop.title}</h3>
+              <p class="font-medium mb-2">${prop.location}</p>
+              <p class="text-blue-400 font-semibold">${prop.price ? `₦${prop.price.toLocaleString()} ${prop.price_type || ''}` : 'Price on Request'}</p>
+              <a href="/hostels/detail?id=${prop.id}" class="mt-4 inline-block text-blue-400 hover:text-blue-300 font-semibold">View Details</a>
+            </div>
+          </div>
+        `).join('') : '<p class="text-center col-span-full">No properties found.</p>';
+      } catch (error) {
+        console.error('Error fetching properties:', error);
+        document.getElementById('propertiesGrid').innerHTML = '<p class="text-center col-span-full text-red-500">Error loading properties.</p>';
+      }
+    }
+
+    // Property Filter
+    document.addEventListener('DOMContentLoaded', () => {
+      const filter = document.getElementById('propertyFilter');
+      filter.addEventListener('change', () => fetchProperties(filter.value));
+      fetchProperties(); // Initial load
+    });
+
+    // Tawk.to Live Chat
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
     (function(){
-      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-      s1.async=true;
-      s1.src='https://embed.tawk.to/681591c4e8036f191c6e7202/1iqa42puc';
-      s1.charset='UTF-8';
-      s1.setAttribute('crossorigin','*');
-      s0.parentNode.insertBefore(s1,s0);
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/681591c4e8036f191c6e7202/1iqa42puc';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
     })();
     Tawk_API.onLoad = function() {
       Tawk_API.customStyle = {
