--- a/index.html
+++ b/index.html
@@ -1083,17 +1083,17 @@
     function getMockProperties() {
       return [
         {
-          id: 'hostel-phase1',
-          title: 'BrightWave Hostel Phase 1',
-          type: 'hostel',
-          location: 'Malete, Kwara State',
-          price: null,
-          price_type: 'Contact for Pricing',
-          description: 'Modern 10-room self-contained hostel near KWASU. Features 24/7 security, solar power, and recreational facilities.',
-          construction_status: 'ongoing',
-          featured: true,
-          images: ['images/hostels/brightwave-phase1-exterior.jpg']
-        },
+  id: 'hostel-phase1',
+  title: 'BrightWave Hostel Phase 1',
+  type: 'hostel',
+  location: 'Malete, Kwara State',
+  price: null,
+  price_type: 'Contact for Pricing',
+  description: 'Modern 10-room self-contained hostel near KWASU. Features 24/7 security, solar power, and recreational facilities.',
+  construction_status: 'ongoing',
+  featured: true,
+  images: ['images/brightwave-project-1.jpg']  // Updated path
+},
         {
           id: 'hostel-phase2',
           title: 'BrightWave Hostel Phase 2',
