--- a/index.html
+++ b/index.html
@@ -147,14 +147,15 @@
       </button>
       
       <!-- Desktop Navigation -->
-      <ul class="hidden md:flex space-x-8 text-lg font-semibold">
-        <li><a href="#home" class="text-slate-200 hover:text-slate-100 nav-link active transition-all duration-300 relative">Home</a></li>
-        <li><a href="#services" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300 relative">Services</a></li>
-        <li><a href="#properties" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300 relative">Properties</a></li>
-        <li><a href="#about" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300 relative">About</a></li>
-        <li><a href="#team" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300 relative">Team</a></li>
-        <li><a href="#contact" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300 relative">Contact</a></li>
-      </ul>
+<ul class="hidden md:flex space-x-8 text-lg font-semibold">
+  <li><a href="#home" class="text-slate-200 hover:text-slate-100 nav-link active transition-all duration-300 relative">Home</a></li>
+  <li><a href="#services" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300 relative">Services</a></li>
+  <li><a href="#properties" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300 relative">Properties</a></li>
+  <li><a href="#about" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300 relative">About</a></li>
+  <li><a href="#team" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300 relative">Team</a></li>
+  <li><a href="/faq.html" class="text-slate-400 hover:text-slate-200 transition-all duration-300">FAQ</a></li>
+  <li><a href="#contact" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300 relative">Contact</a></li>
+</ul>
     </nav>
     
     <!-- Mobile Navigation Menu -->
@@ -165,6 +166,7 @@
         <li><a href="#properties" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300">Properties</a></li>
         <li><a href="#about" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300">About</a></li>
         <li><a href="#team" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300">Team</a></li>
+        <li><a href="/faq.html" class="text-slate-400 hover:text-slate-200 transition-all duration-300">FAQ</a></li>
         <li><a href="#contact" class="text-slate-400 hover:text-slate-200 nav-link transition-all duration-300">Contact</a></li>
       </ul>
     </div>
@@ -248,7 +250,7 @@
             <li><i class="fas fa-check text-green-400 mr-2"></i>Solar power backup</li>
             <li><i class="fas fa-check text-green-400 mr-2"></i>Recreation facilities</li>
           </ul>
-          <a href="#properties" class="inline-block bg-slate-600 text-white px-6 py-2 rounded-lg hover:bg-slate-700 transition">View Hostels</a>
+          <a href="/hostel-detail.html" class="inline-block bg-slate-600 text-white px-6 py-2 rounded-lg hover:bg-slate-700 transition">View Details</a>
         </div>
 
         <!-- Land Sales -->
