--- a/hostel-detail.html
+++ b/hostel-detail.html
@@ -122,7 +122,7 @@
           Located in Malete, Kwara State, Phase 1 features <span class="font-semibold">10 self-contained rooms</span> crafted for students—each with a private bathroom and kitchenette. The compound provides <span class="font-semibold">24/7 security, CCTV, solar backup, constant water</span> and a community-friendly courtyard with recreation.
         </p>
         <p class="text-lg text-gray-300 max-w-4xl mx-auto">
-          <span class="font-bold text-slate-200">Availability:</span> under construction — targeted completion by end of 2025. <br/>
+          <span class="font-bold text-slate-200">Availability:</span> under construction — targeted completion by end of first quarter of 2026. <br/>
           <span class="font-bold text-slate-200">Pricing:</span> contact us for rates and session plans.
         </p>
       </div>
