--- a/index.html
+++ b/index.html
@@ -1112,25 +1112,13 @@
           id: 'hostel-phase3',
           title: 'BrightWave Hostel Phase 3',
           type: 'hostel',
-          location: 'Tanke, Ilorin, Kwara State',
+          location: 'GreenCity, Malete, Kwara State',
           price: 620000,
           price_type: 'per session',
-          description: '40-room premium hostel complex with gym, library, and recreational facilities. Near University of Ilorin.',
+          description: '40-room premium hostel complex with gym, library, and recreational facilities. Near University of Kwara State.',
           construction_status: 'planning',
           featured: false,
           images: ['images/hostels/brightwave-phase3-concept.jpg']
-        },
-        {
-          id: 'land-ilorin-gra',
-          title: 'Premium Land - Ilorin GRA',
-          type: 'land',
-          location: 'GRA, Ilorin, Kwara State',
-          price: 2000000,
-          price_type: 'per plot (600sqm)',
-          description: '600sqm residential plot in prestigious Government Reserved Area. Perfect for luxury residential development.',
-          construction_status: 'completed',
-          featured: true,
-          images: ['images/lands/ilorin-gra-plot.jpg']
         },
         {
           id: 'land-fate-road',
@@ -1145,26 +1133,14 @@
           images: ['images/lands/fate-road-commercial.jpg']
         },
         {
-          id: 'land-kulende',
-          title: 'Residential Plot - Kulende',
-          type: 'land',
-          location: 'Kulende, Ilorin West, Kwara State',
-          price: 2500000,
-          price_type: 'per plot (700sqm)',
-          description: '700sqm residential land in serene Kulende area. Close to schools and major roads.',
-          construction_status: 'completed',
-          featured: false,
-          images: ['images/lands/kulende-residential.jpg']
-        },
-        {
           id: 'land-offa-garage',
-          title: 'Investment Land - Offa Garage',
+          title: 'Investment Land - BrightWave Estate',
           type: 'land',
-          location: 'Offa Garage Area, Ilorin, Kwara State',
-          price: 800000,
+          location: 'Obada Ikija, Abeokuta, Ogun State',
+          price: 1500000,
           price_type: 'per plot (500sqm)',
           description: '500sqm plot in developing area. Great investment opportunity with flexible payment plans.',
-          construction_status: 'completed',
+          construction_status: 'Clearing',
           featured: false,
           images: ['images/lands/offa-garage-investment.jpg']
         },
