--- a/index.html
+++ b/index.html
@@ -1133,13 +1133,13 @@
           images: ['images/lands/fate-road-commercial.jpg']
         },
         {
-          id: 'land-offa-garage',
+          id: 'land-obada_ikija',
           title: 'Investment Land - BrightWave Estate',
           type: 'land',
           location: 'Obada Ikija, Abeokuta, Ogun State',
           price: 1500000,
           price_type: 'per plot (500sqm)',
-          description: '500sqm plot in developing area. Great investment opportunity with flexible payment plans.',
+          description: '6 acres of prime residential land at Obada Ikija, Abeokuta, featuring residential plots, modern homes, and community amenities.',
           construction_status: 'Clearing',
           featured: false,
           images: ['images/lands/offa-garage-investment.jpg']
