--- a/index.html
+++ b/index.html
@@ -1,19 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "name": "BrightWave Habitat Enterprise",
+      "legalName": "BrightWave Habitat Enterprise",
+      "url": "https://brightwaveenterprises.online/",
+      "logo": "https://brightwaveenterprises.online/assets/images/brightwave-logo.png",
+      "description": "BrightWave Habitat Enterprise builds affordable student hostels, sells prime land, and develops modern residential estates across Nigeria.",
+      "sameAs": [
+        "https://www.facebook.com/share/19BvJAymc3/?mibextid=wwXIfr",
+        "https://x.com/brightwave__?s=21",
+        "https://www.instagram.com/brightwave___?igsh=MXN3NHAzdGU1a2ppaQ%3D&utm_-source=qr"
+      ],
+      "foundingDate": "2024-09",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Malete",
+        "addressRegion": "Kwara State",
+        "addressCountry": "NG"
+      },
+      "contactPoint": [{
+        "@type": "ContactPoint",
+        "contactType": "customer support",
+        "email": "brightwaveenterprise0@gmail.com",
+        "telephone": "+2348037669462",
+        "areaServed": "NG",
+        "availableLanguage": ["en"]
+      }]
+    },
+    {
+      "@type": "WebSite",
+      "name": "BrightWave Habitat Enterprise",
+      "url": "https://brightwaveenterprises.online/"
+    }
+  ]
+}
+</script>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="BrightWave Habitat Enterprise - Your trusted partner for student hostels, land sales, residential properties, and estate development in Nigeria." />
-  <!-- Open Graph Meta Tags for Previews -->
-  <meta property="og:title" content="BrightWave Habitat Enterprise" />
-  <meta property="og:description" content="Discover student hostels, land sales, residential properties, and estate development with BrightWave Habitat Enterprise in Nigeria." />
-  <meta property="og:image" content="https://brightwaveenterprises.online/assets/images/brightwave-preview.png" />
-  <meta property="og:image:type" content="image/png" />
-  <meta property="og:image:width" content="500" />
-  <meta property="og:image:height" content="500" />
-  <meta property="og:url" content="https://brightwaveenterprises.online/" />
-  <meta property="og:type" content="website" />
-  <title>BrightWave Habitat Enterprise - Student Hostels, Land Sales & Estate Development</title>
+<!-- SEO + Social -->
+<title>BrightWave Habitat Enterprise – Building Tomorrow’s Living Solutions</title>
+
+<meta name="description" content="BrightWave Habitat Enterprise — student hostels, land sales, residential homes & estate development in Nigeria. Affordable, secure, and sustainable living." />
+<link rel="canonical" href="https://brightwaveenterprises.online/" />
+
+<!-- Open Graph (WhatsApp/Facebook/etc.) -->
+<meta property="og:title" content="BrightWave Habitat Enterprise" />
+<meta property="og:description" content="Student hostels, land sales, residential homes & estate development in Nigeria. Affordable, secure, and sustainable living." />
+<meta property="og:image" content="https://brightwaveenterprises.online/assets/images/brightwave-preview.png" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="500" />
+<meta property="og:image:height" content="500" />
+<meta property="og:url" content="https://brightwaveenterprises.online/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter (X) Cards -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="BrightWave Habitat Enterprise" />
+<meta name="twitter:description" content="Student hostels, land sales, residential homes & estate development in Nigeria. Affordable, secure, and sustainable living." />
+<meta name="twitter:image" content="https://brightwaveenterprises.online/assets/images/brightwave-preview.png" />
+<meta name="twitter:site" content="@brightwave__" />
   <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
