Update review avatars to authentic Nigerian student images for Google Reviews section.

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="glass-effect p-8 rounded-2xl hover-lift">
           <div class="flex items-center mb-4">
-            <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Ayo O." class="w-12 h-12 rounded-full mr-4" />
+            <img src="/assets/images/nigerian-student-1.jpg" alt="Ayo O." class="w-12 h-12 rounded-full mr-4" />
             <div>
               <h4 class="font-semibold text-lg">Ayo O.</h4>
               <p class="text-gray-400 text-sm">Local Guide</p>
@@ -552,7 +552,7 @@
         </div>
         <div class="glass-effect p-8 rounded-2xl hover-lift">
           <div class="flex items-center mb-4">
-            <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Fatima I." class="w-12 h-12 rounded-full mr-4" />
+            <img src="/assets/images/nigerian-student-2.jpg" alt="Fatima I." class="w-12 h-12 rounded-full mr-4" />
             <div>
               <h4 class="font-semibold text-lg">Fatima I.</h4>
               <p class="text-gray-400 text-sm">Land Buyer</p>
@@ -566,7 +566,7 @@
         </div>
         <div class="glass-effect p-8 rounded-2xl hover-lift">
           <div class="flex items-center mb-4">
-            <img src="https://randomuser.me/api/portraits/men/65.jpg" alt="Michael O." class="w-12 h-12 rounded-full mr-4" />
+            <img src="/assets/images/nigerian-student-3.jpg" alt="Michael O." class="w-12 h-12 rounded-full mr-4" />
             <div>
               <h4 class="font-semibold text-lg">Michael O.</h4>
               <p class="text-gray-400 text-sm">Developer</p>
